--- a/views/tournaments/tournaments-create.hbs
+++ b/views/tournaments/tournaments-create.hbs
@@ -1,8 +1,8 @@
-<h1>Create a Student</h1>
+<h1>Create a Tournament</h1>
 
 
 
-<form method="POST" action="/students/create" >
+<form method="POST" action="/tournaments/create" >
     <label>name</label>
     <input type="text" name="name" />
 
