--- a/views/tournaments/tournaments-edit.hbs
+++ b/views/tournaments/tournaments-edit.hbs
@@ -1,5 +1,5 @@
-<h1>Edit Students</h1>
-<form method="POST" action="/students/{{id}}/edit">
+<h1>Edit Tournament</h1>
+<form method="POST" action="/tournaments/{{id}}/edit">
     <label>name</label>
     <input type="text" name="name" value={{name}} />
     <label>Description</label>
