--- a/views/tournaments/tournaments-list.hbs
+++ b/views/tournaments/tournaments-list.hbs
@@ -1,7 +1,14 @@
-<h1>Books list</h1>
+<h1>Tournaments list</h1>
+{{#each tournaments}}
+ <a href="tournaments/{{id}}">   {{name}} tournament  </a>
 
-{{!-- 
-<ul>
+<br>
+Description: {{description}}
+<br>
+<br>
+<br>
+{{/each}}
+{{!-- <ul>
 {{#each books}}
 <li>
     <a href="books/{{id}}">   {{title}}  </a>
