--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -9,7 +9,8 @@
     <button type="submit">Login</button>
 </form>
 <br>
-<button type="submit"><a>Forgot password?</a></button>
+<a href="/signup">Create an account</a>
+
 
 {{#if errorMessage}}
     <p>{{errorMessage}}</p>
