--- a/views/houses/houses-list.hbs
+++ b/views/houses/houses-list.hbs
@@ -8,6 +8,11 @@ Description: {{description}}
 <br>
 <br>
 {{/each}}
+
+
+<br>
+<button><a href="/houses/update">Update</a></button>
+<hr/>
 {{!-- <ul>
 {{#each books}}
 <li>
