--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,2 +1,9 @@
-<h1>{{title}} 🚀</h1>
-<p>Welcome Ironhacker!</p>
+
+<hr/>
+<br>
+<h1>You have been invited to lead your very own distinct quidditch team to victory</h1>
+<p>take part in a centuries old wizarding tradition</p>
+<hr/>
+<br>
+<button><a href="/login">Accept your invitation</a></button>
+<hr/>
