--- a/views/students/students-list.hbs
+++ b/views/students/students-list.hbs
@@ -2,12 +2,19 @@
 {{#each students}}
  <a href="students/{{id}}">  {{name}}  </a>
 
+
+
 <br>
 Description: {{description}}
+
+
 <br>
 <br>
 <br>
 {{/each}}
+<br>
+<button><a href="/students/update">Update</a></button>
+<hr/>
 {{!-- <ul>
 {{#each books}}
 <li>
