--- a/views/tournaments/tournaments-list.hbs
+++ b/views/tournaments/tournaments-list.hbs
@@ -8,6 +8,10 @@ Description: {{description}}
 <br>
 <br>
 {{/each}}
+
+<br>
+<button><a href="/tournaments/update">Update</a></button>
+<hr/>
 {{!-- <ul>
 {{#each books}}
 <li>
