--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -16,10 +16,7 @@
          <a href="/">Home</a>
          </li>
          <li>
-         <a href="/houses">Houses</a>
-         </li>
-         <li>
-         <a href="/houses/create">Create House</a>
+         <a href="/houses/">Houses</a>
          </li>
          <li>
                <a href="/halls">Halls</a>
