first commit of the day

--- a/views/Dashboard/Dashboard-sorting.hbs
+++ b/views/Dashboard/Dashboard-sorting.hbs
@@ -1,8 +1,9 @@
 <h1>What Hogwarts House would you be in?</h1>
 <p>Are you a brave Gryffindor, a cunning Slytherin, smart Ravenclaw, or kind Hufflepuff?</p>
 
-
-<button><a href="/Dashboard">Enter Hogwarts</a></button>
+<form action="/dashboard/sorting-result" method="POST">
+    <button type="submit">Reveal</button>
+</form>
 
 
 
