--- a/views/houses/houses-list.hbs
+++ b/views/houses/houses-list.hbs
@@ -3,11 +3,13 @@
  <a href="houses/{{id}}">  House of {{name}}  </a>
 
 <br>
-Description: {{description}}
+Description: {{values}}
 <br>
 <br>
 <br>
 {{/each}}
+
+{{#if }}
 
 
 <br>
