--- a/views/houses/houses-list.hbs
+++ b/views/houses/houses-list.hbs
@@ -1,29 +1,15 @@
-<h1>Houses list</h1>
-{{#each houses}}
- <a href="houses/{{id}}">  House of {{name}}  </a>
+ <h1>  House of {{name}}  </h1>
 
 <br>
-Description: {{values}}
+<h3> Description: {{values}} </h3>
 <br>
 <br>
 <br>
-{{/each}}
 
-{{#if }}
+
 
 
 <br>
 <button><a href="/houses/update">Update</a></button>
 <hr/>
-{{!-- <ul>
-{{#each books}}
-<li>
-    <a href="books/{{id}}">   {{title}}  </a>
-    <form action="/books/{{id}}/delete" method="POST">
-        <button type="submit">Delete</button>
-    </form>
-    <br/>
-</li>
-{{/each}}
-</ul> --}}
 
