match, houses and students updated

--- a/views/Dashboard/Dashboard-landing.hbs
+++ b/views/Dashboard/Dashboard-landing.hbs
@@ -2,7 +2,7 @@
 <h3>"Professor Minerva McGonagall: Greetings {{loggedInUser}}."</h3>
 
 <br>
-<button><a href="/houses">Houses</a></button>
+<button><a href="/houses">Common room</a></button>
 <hr/>
 <br>
 <button><a href="/tournaments">Tournament</a></button>
@@ -11,5 +11,5 @@
 <button><a href="/students">Students</a></button>
 <hr/>
 <br>
-<button><a href="/dashboard/match">Witch</a></button>
+<button><a href="/match">Witch</a></button>
 <hr/>
