--- a/views/students/students-list.hbs
+++ b/views/students/students-list.hbs
@@ -12,18 +12,6 @@ house: {{house}}
 <br>
 <br>
 {{/each}}
-<br>
-<button><a href="/students/update">Update</a></button>
 <hr/>
-{{!-- <ul>
-{{#each books}}
-<li>
-    <a href="books/{{id}}">   {{title}}  </a>
-    <form action="/books/{{id}}/delete" method="POST">
-        <button type="submit">Delete</button>
-    </form>
-    <br/>
-</li>
-{{/each}}
-</ul> --}}
+<button><a href="/dashboard">Go back to Dashboard</a></button>
 
