--- a/views/students/students-details.hbs
+++ b/views/students/students-details.hbs
@@ -1,10 +1,15 @@
 <h1>{{name}}</h1>
-<h3>Description: {{description}}</h3>
+<h3>House of {{house}}</h3>
+<h4>{{gender}}</h4>
+<p>{{darkArts}}</p>
+<p>{{defenseAgainstTheDarkArts}}</p>
+<p>{{transfiguration}}</p>
+<p>{{alchemy}}</p>
 
 {{#if imageUrl}}
     <img src="{{imageUrl}}" />
 {{/if}}
-<button><a href="/students/{{id}}/edit">Edit a Student</a></button>
+{{!-- <button><a href="/students/{{id}}/edit">Edit a Student</a></button> --}}
 <hr/>
 
 {{#if choosen}}
@@ -21,6 +26,8 @@
     <button type="submit">Recruit</button>
 </form>
 {{/if}}
+
+<button><a href="/students">Go back to students list</a></button>
 
 
 {{!-- <p>Add a review</p>
