first commit of the day

--- a/views/Dashboard/Dashboard-landing.hbs
+++ b/views/Dashboard/Dashboard-landing.hbs
@@ -8,6 +8,9 @@
 <button><a href="/tournaments">Tournament</a></button>
 <hr/>
 <br>
+<button><a href="/students/team">Team</a></button>
+<hr/>
+<br>
 <button><a href="/students">Students</a></button>
 <hr/>
 <br>
