--- a/views/match/match.hbs
+++ b/views/match/match.hbs
@@ -5,4 +5,9 @@
 
 <hr/>
 
+<form action="/match" method="POST">
+<p>Time to prove yourself</p>
+    <button type="submit">Play</button>
+</form>
+
 
