--- a/views/students/students-details.hbs
+++ b/views/students/students-details.hbs
@@ -1,10 +1,13 @@
 <h1>{{name}}</h1>
 <h3>House of {{house}}</h3>
 <h4>{{gender}}</h4>
-<p>{{darkArts}}</p>
-<p>{{defenseAgainstTheDarkArts}}</p>
-<p>{{transfiguration}}</p>
-<p>{{alchemy}}</p>
+
+
+<h5>grades</h5>
+<p>Dark Arts:{{darkArts}}</p>
+<p>Defense Against the Dark Arts:{{defenseAgainstTheDarkArts}}</p>
+<p>Transfiguration:{{transfiguration}}</p>
+<p>Alchemy:{{alchemy}}</p>
 
 {{#if imageUrl}}
     <img src="{{imageUrl}}" />
