--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -7,58 +7,39 @@
       <meta http-equiv="X-UA-Compatible" content="ie=edge">
       <title>{{title}}</title>
       <link rel="stylesheet" href="/stylesheets/style.css" />
+      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
       <script src="/js/script.js" defer></script>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
    </head>
 
    <body>
-   <div class="flex-horizontal">
+   <nav class="nav-bar cotainer-fluid">
          
-            {{!-- <a href="/halls/create">Create Hall</a> --}}
+      {{#if loggedInUser}}
+
+         <a href="/tournaments">tournaments</a>
+
+         <a href="/students">Students</a>
+
+         <a href="/houses/">Houses</a>
+
+         <a href="/dashboard">Dashboard</a>
+
+         
+         <p>Welcome {{loggedInUser}}</p>
+         
+         <form action="/logout" method="POST">
+         <button type="submit">Logout</button>
+         </form>
+
+      {{else}}
+
+         <a href="/">Home</a>
       
-         
-            {{!-- <a href="/students/create">Create Student</a> --}}
-         
-            {{!-- 
-            
-            Deprecated
-
-            <a href="/teachers">Teachers</a>
-         
-            <a href="/teachers/create">Create Teacher</a> --}}
-         
-            {{!-- <a href="/tournaments/create">Create Tournament</a> --}}
-         
-            {{!-- <a href="/auth">auth</a> --}}
-         
-            
-         
-          {{#if loggedInUser}}
-
-            <a href="/tournaments">tournaments</a>
-
-            <a href="/students">Students</a>
-
-            <a href="/houses/">Houses</a>
-
-            <a href="/dashboard">Dashboard</a>
-
-            
-            <p>Welcome {{loggedInUser}}</p>
-            
-               <form action="/logout" method="POST">
-               <button type="submit">Logout</button>
-               </form>
-
-         {{else}}
-
-            <a href="/">Home</a>
-
-            <a href="/signup">Singup</a>
-         
-            <a href="/login">Login</a>
+         <a class="login-button" href="/login">Login</a>
 
       {{/if}}
-   </div>
+   </nav>
 
  
       {{{body}}}
