backend logic resolved

--- a/views/match/match-lose.hbs
+++ b/views/match/match-lose.hbs
@@ -10,5 +10,9 @@ Defeat
 
 
 
-<br>
-<button><a href="/dashboard">Go back to Dashboard</a></button>
+{{!-- <br>
+<button><a href="/dashboard">Go back to Dashboard</a></button> --}}
+
+<form action="/match/match-lose" method="POST">
+<p>Though your pupils gave it there all they were just short of securing victory</p>
+    <button type="submit">Live to play for another day</button>
