--- a/views/students/students-list.hbs
+++ b/views/students/students-list.hbs
@@ -13,5 +13,8 @@ house: {{house}}
 <br>
 {{/each}}
 <hr/>
+{{#if errorMessage}}
+<h1>{{errorMessage}}</h1>
+{{/if}}
 <button><a href="/dashboard">Go back to Dashboard</a></button>
 
