--- a/views/match/match-dark.hbs
+++ b/views/match/match-dark.hbs
@@ -5,7 +5,7 @@
 
 
 <form action="/match/match-dark" method="POST">
-<p>Brave forth with tenaity capable of breaking the most wicked of hexes</p>
+<p>The crowd murmours. Why is it that misfortune seems to follow your team wherever they go?</p>
     <button type="submit">Play</button>
 </form>
 
