--- a/views/match/match-transfiguration.hbs
+++ b/views/match/match-transfiguration.hbs
@@ -3,7 +3,7 @@
 
 
 <form action="/match/match-transfiguration" method="POST">
-<p>Brave forth with tenaity capable of breaking the most wicked of hexes</p>
+<p>Your team proved to be most ingenous. Objects gain unusual properties whenever they are on the field</p>
     <button type="submit">Play</button>
 </form>
 
