--- a/views/match/match-win.hbs
+++ b/views/match/match-win.hbs
@@ -9,4 +9,9 @@ Victory
 
 
 <br>
-<button><a href="/dashboard">Go back to Dashboard</a></button>
+{{!-- <button><a href="/dashboard">Go back to Dashboard</a></button> --}}
+
+
+<form action="/match/match-win" method="POST">
+<p>Your pupils are elated with their performance</p>
+    <button type="submit">Celebrate</button>
