--- a/views/Dashboard/Dashboard-sorting.hbs
+++ b/views/Dashboard/Dashboard-sorting.hbs
@@ -1,8 +1,10 @@
-<h1>What Hogwarts House would you be in?</h1>
-<p>Are you a brave Gryffindor, a cunning Slytherin, smart Ravenclaw, or kind Hufflepuff?</p>
-
-
-<button><a href="/dashboard/sorting-result">Enter Hogwarts</a></button>
+<div class="log-div sorting-div-img">
+    <div class="sorting-page">
+        <h1>What Hogwarts House would you be in?</h1>
+        <p>Are you a brave Gryffindor, a cunning Slytherin, smart Ravenclaw, or kind Hufflepuff?</p>
+        <a href="/dashboard/sorting-result">Enter Hogwarts</a>
+    </div>
+</div>
 
 
 
