--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,8 +1,9 @@
+<div class="index container-fluid">
+    <div class="index-content">
+        <h1>You have been invited to lead your very own distinct quidditch team to victory</h1>
+        <p>Take part in a centuries old wizarding tradition</p>
 
 
-
-<h1>You have been invited to lead your very own distinct quidditch team to victory</h1>
-<p>take part in a centuries old wizarding tradition</p>
-
-
-<button><a href="/login">Accept your invitation</a></button>
+        <a href="/login">Accept your invitation</a>
+    </div>
+</div>
