--- a/views/Dashboard/dashboard-sorting-result.hbs
+++ b/views/Dashboard/dashboard-sorting-result.hbs
@@ -1,3 +1,6 @@
-<h1>You are going to be part of house {{name}}</h1>
-
-<button><a href="/dashboard">Start learning</a></button>
+<div class="log-div sorting-div-img">
+    <div class="sorting-page">
+        <h1>You are going to be part of house {{name}}</h1>
+        <a href="/dashboard">Start learning</a>
+    </div>
+</div>
