--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -1,17 +1,20 @@
-<h2>Login</h2>
-<form action="/login" method="POST" />
-    <label>Username</label>
-    <input type="text" name="username" required/>
+<div class="log-div">
+    <div class="login-page">
+        <h2>Login</h2>
+            <form class="login-form" action="/login" method="POST" />
+                <label>Username</label>
+                <input type="text" name="username" required/>
 
-    <label>Password</label>
-    <input type="password" name="password" required/>
+                <label>Password</label>
+                <input type="password" name="password" required/>
 
-    <button type="submit">Login</button>
-</form>
-<br>
-<a href="/signup">Create an account</a>
-
-
-{{#if errorMessage}}
-    <p>{{errorMessage}}</p>
-{{/if}}
+                <div>
+                    <a href="/signup">Create an account</a>
+                    <button type="submit">Login</button>
+                </div>
+            </form>
+        {{#if errorMessage}}
+            <p>{{errorMessage}}</p>
+        {{/if}}
+    </div>
+</div>
