--- a/views/auth/signup.hbs
+++ b/views/auth/signup.hbs
@@ -1,17 +1,19 @@
-<h2>Signup</h2>
-<form action="/signup" method="POST" />
-    <label>Username</label>
-    <input type="text" name="username" required/>
+<div class="log-div">
+    <div class="signup-page">
+        <h2>Signup</h2>
+        <form class="signup-form" action="/signup" method="POST"/>
 
-    <label>Password</label>
-    <input type="password" name="password" required/>
+            <label>Username</label>
+            <input type="text" name="username" required/>
 
-    {{!-- <label>Recovery question - what is your patronus?</label>
-    <input type="text" name="secretQuestion" required/> --}}
+            <label>Password</label>
+            <input type="password" name="password" required/>
 
-    <button type="submit">Signup</button>
-</form>
+            <button type="submit">Signup</button>
+        </form>
 
-{{#if errorMessage}}
-    <p>{{errorMessage}}</p>
-{{/if}}
+        {{#if errorMessage}}
+            <p>{{errorMessage}}</p>
+        {{/if}}
+    </div>
+</div>
