--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -5,7 +5,8 @@
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <meta http-equiv="X-UA-Compatible" content="ie=edge">
-      <title>{{title}}</title>
+      <title>Hogwarts Quidditch Cup</title>
+      <link rel="icon" href="/images/Gold_Edited.png" type="image/png" />
       <link rel="stylesheet" href="/stylesheets/style.css" />
       <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
       <script src="/js/script.js" defer></script>
@@ -13,33 +14,36 @@
    </head>
 
    <body>
-   <nav class="nav-bar cotainer-fluid">
+      <div class="top-nav container-fluid">
+         <a href="/"><img src="/images/Harry_Potter_wordmark.svg.png" alt="logo"></a>
+      </div>
+      <nav class="nav-bar container-fluid">
+            
+         {{#if loggedInUser}}
+
+            <a href="/tournaments">TOURNAMENTS</a>
+
+            <a href="/students">STUDENTS</a>
+
+            <a href="/houses/">HOUSE</a>
+
+            <a href="/dashboard">DASHBOARD</a>
+
+            
+            <p>Welcome {{loggedInUser}}!</p>
+            
+            <form action="/logout" method="POST">
+            <button type="submit">Logout</button>
+            </form>
+
+         {{else}}
+
+            <a href="/">HOME</a>
          
-      {{#if loggedInUser}}
+            <a class="login-button" href="/login">Login</a>
 
-         <a href="/tournaments">tournaments</a>
-
-         <a href="/students">Students</a>
-
-         <a href="/houses/">Houses</a>
-
-         <a href="/dashboard">Dashboard</a>
-
-         
-         <p>Welcome {{loggedInUser}}</p>
-         
-         <form action="/logout" method="POST">
-         <button type="submit">Logout</button>
-         </form>
-
-      {{else}}
-
-         <a href="/">Home</a>
-      
-         <a class="login-button" href="/login">Login</a>
-
-      {{/if}}
-   </nav>
+         {{/if}}
+      </nav>
 
  
       {{{body}}}
