first commit of the day frontend sprint

--- a/views/match/match-defense.hbs
+++ b/views/match/match-defense.hbs
@@ -1,9 +1,16 @@
-<p>"Your pupils heart's proved to be of the most purest kind"</p>
+<div class="log-div sorting-div-img">
+    <div class="sorting-page">
+            <p>"Your pupils heart's proved to be of the most purest kind"</p>
+       <form action="/match/match-defense" method="POST">
+            <p>Brave forth with tenacity capable of breaking the most wicked of hexes</p>
+            <button type="submit">Play</button>
+        </form>
+    </div>
+</div>
 
 
 
 
-<form action="/match/match-defense" method="POST">
-<p>Brave forth with tenaity capable of breaking the most wicked of hexes</p>
-    <button type="submit">Play</button>
-</form>
+
+
+
