--- a/views/match/match-win.hbs
+++ b/views/match/match-win.hbs
@@ -1,17 +1,9 @@
-Victory
+<div class="log-div sorting-div-img">
+    <div class="sorting-page">
+        <form action="/match/match-win" method="POST">
+              <p>Your pupils are elated with their performance</p>
+              <button type="submit">Celebrate</button>
+        </form>
+    </div>
+</div>
 
-
-
-
-
-
-
-
-
-<br>
-{{!-- <button><a href="/dashboard">Go back to Dashboard</a></button> --}}
-
-
-<form action="/match/match-win" method="POST">
-<p>Your pupils are elated with their performance</p>
-    <button type="submit">Celebrate</button>
