--- a/views/match/match.hbs
+++ b/views/match/match.hbs
@@ -1,13 +1,8 @@
-<h1> match </h1>
-
-<br>
-<button><a href="/match-update">Match</a></button>
-
-<hr/>
-
-<form action="/match" method="POST">
-<p>Time to prove yourself</p>
-    <button type="submit">Play</button>
-</form>
-
-
+<div class="log-div sorting-div-img">
+    <div class="sorting-page">
+        <form action="/match" method="POST">
+            <p>Time to prove yourself</p>
+            <button type="submit">Play</button>
+        </form>
+    </div>
+</div>
