--- a/views/match/match-alchemy.hbs
+++ b/views/match/match-alchemy.hbs
@@ -1,10 +1,15 @@
+<div class="log-div sorting-div-img">
+    <div class="sorting-page">
+        <form action="/match/match-alchemy" method="POST">
+            <p>Brave forth with tenaity capable of breaking the most wicked of hexes</p>
+            <button type="submit">Play</button>
+        </form>
+    </div>
+</div>
 
 
 
-<form action="/match/match-alchemy" method="POST">
-<p>Brave forth with tenaity capable of breaking the most wicked of hexes</p>
-    <button type="submit">Play</button>
-</form>
-
-
-
+{{!-- 
+<h1>What Hogwarts House would you be in?</h1>
+        <p>Are you a brave Gryffindor, a cunning Slytherin, smart Ravenclaw, or kind Hufflepuff?</p>
+        <a href="/dashboard/sorting-result">Enter Hogwarts</a> --}}
