--- a/views/match/match-lose.hbs
+++ b/views/match/match-lose.hbs
@@ -1,4 +1,14 @@
-Defeat
+<div class="log-div sorting-div-img">
+    <div class="sorting-page">
+        <p>It seems that this year's divinations were not in your favour.</p>
+        <p>Though you did not achieve the accolades of winning the Hogwarts quidditch cup, </p>
+        <p>you fostered a great team enviroment for the member of your house</p>
+        <form action="/match/match-lose" method="POST">
+            <p>Though your pupils gave it there all they were just short of securing victory</p>
+            <button type="submit">Live to play for another day</button>
+        </form>
+    </div>
+</div>
 
 
 
@@ -8,11 +18,3 @@ Defeat
 
 
 
-
-
-{{!-- <br>
-<button><a href="/dashboard">Go back to Dashboard</a></button> --}}
-
-<form action="/match/match-lose" method="POST">
-<p>Though your pupils gave it there all they were just short of securing victory</p>
-    <button type="submit">Live to play for another day</button>
