--- a/views/Dashboard/Dashboard-landing.hbs
+++ b/views/Dashboard/Dashboard-landing.hbs
@@ -1,18 +1,14 @@
-<h1></h1>
-<h3>"Professor Minerva McGonagall: Greetings {{loggedInUser}}."</h3>
+<div class="log-div">
+    <div class="dashboard-page">
+        <h3>"Professor Minerva McGonagall: Greetings {{loggedInUser}}."</h3>
+        <div class="dashboard-buttons">
+            <a href="/houses">Common room</a>
+            <a href="/tournaments">Tournament</a>
+            <a href="/students/team">Team</a>
+            <a href="/students">Students</a>
+            <a href="/match">Witch</a>
+        </div>
+    </div>
+</div>
 
-<br>
-<button><a href="/houses">Common room</a></button>
-<hr/>
-<br>
-<button><a href="/tournaments">Tournament</a></button>
-<hr/>
-<br>
-<button><a href="/students/team">Team</a></button>
-<hr/>
-<br>
-<button><a href="/students">Students</a></button>
-<hr/>
-<br>
-<button><a href="/match">Witch</a></button>
-<hr/>
+
