--- a/views/match/match-alchemy.hbs
+++ b/views/match/match-alchemy.hbs
@@ -1,4 +1,4 @@
-<div class="log-div sorting-div-img">
+<div class="log-div alchemy-div-img">
     <div class="sorting-page">
         <form action="/match/match-alchemy" method="POST">
             <p>Brave forth with tenaity capable of breaking the most wicked of hexes</p>
