--- a/views/match/match-dark.hbs
+++ b/views/match/match-dark.hbs
@@ -1,4 +1,4 @@
-<div class="log-div sorting-div-img">
+<div class="log-div dark-div-img">
     <div class="sorting-page">
         <form action="/match/match-dark" method="POST">
              <p>The crowd murmours. Why is it that misfortune seems to follow your team wherever they go?</p>
