--- a/views/match/match-defense.hbs
+++ b/views/match/match-defense.hbs
@@ -1,4 +1,4 @@
-<div class="log-div sorting-div-img">
+<div class="log-div defense-div-img">
     <div class="sorting-page">
             <p>"Your pupils heart's proved to be of the most purest kind"</p>
        <form action="/match/match-defense" method="POST">
