--- a/views/match/match-win.hbs
+++ b/views/match/match-win.hbs
@@ -1,4 +1,4 @@
-<div class="log-div sorting-div-img">
+<div class="log-div win-div-img">
     <div class="sorting-page">
         <form action="/match/match-win" method="POST">
               <p>Your pupils are elated with their performance</p>
