--- a/views/students/students-team.hbs
+++ b/views/students/students-team.hbs
@@ -1,13 +1,19 @@
-{{#each team}}
-<h1>{{name}}</h1>
-<h3>House of {{house}}</h3>
-<h4>{{gender}}</h4>
+<div class="log-div elimination-div-img">
+    <div class="sorting-page">
+       {{#each team}}
+            <h1>{{name}}</h1>
+            <h3>House of {{house}}</h3>
+            <h4>{{gender}}</h4>
 
 
-<h5>grades</h5>
-<p>Dark Arts:{{darkArts}}</p>
-<p>Defense Against the Dark Arts:{{defenseAgainstTheDarkArts}}</p>
-<p>Transfiguration:{{transfiguration}}</p>
-<p>Alchemy:{{alchemy}}</p>
-{{/each}}
-yutytuytyut
+            <h5>grades</h5>
+            <p>Dark Arts:{{darkArts}}</p>
+            <p>Defense Against the Dark Arts:{{defenseAgainstTheDarkArts}}</p>
+            <p>Transfiguration:{{transfiguration}}</p>
+            <p>Alchemy:{{alchemy}}</p>
+            {{/each}}
+    </div>
+</div>
+
+
+
