--- a/views/error.hbs
+++ b/views/error.hbs
@@ -1,2 +1,9 @@
-<h1>Error!</h1>
-<h2>There was an error on the server! Check the console!</h2>
+<div class="log-div error-div-img">
+    <div class="sorting-page">
+        <h1>Caution!</h1>
+        <h2>Your application has been cursed with an error!</h2>
+        <h2>Cast a console.log spell to get to the bottom of this mystery!</h2>
+    </div>
+</div>
+
+
