--- a/views/match/match-champion.hbs
+++ b/views/match/match-champion.hbs
@@ -1,10 +1,10 @@
-<div class="log-div sorting-div-img">
+<div class="log-div champion-div-img">
     <div class="sorting-page">
         <p>You have exceed all expectations.</p>
         <p>Under your guidance house :   Has become the champion of the hogwart quidditch cup.</p>  
         <p>Though the tournament has come to an end worry not for more exciting adventures and tales await you traveller.</p>
         <hr/>
-        <form action="/logout" method="POST">
+        <form action="/finish" method="POST">
          <button type="submit">Farewell Hogwarts</button>
          </form>
     </div>
