--- a/views/match/match-eliminated.hbs
+++ b/views/match/match-eliminated.hbs
@@ -1,9 +1,9 @@
-<div class="log-div sorting-div-img">
+<div class="log-div elimination-div-img">
     <div class="sorting-page">
         <p>It seems that this year's divinations were not in your favour.</p>
         <p>Though you did not achieve the accolades of winning the Hogwarts quidditch cup, </p>
         <p>you fostered a great team enviroment for the member of your house</p>
-        <form action="/logout" method="POST">
+        <form action="/finish" method="POST">
              <button type="submit">Farewell Hogwarts</button>
          </form>
     </div>
