--- a/views/match/match-lose.hbs
+++ b/views/match/match-lose.hbs
@@ -1,4 +1,4 @@
-<div class="log-div sorting-div-img">
+<div class="log-div lose-div-img">
     <div class="sorting-page">
         <p>It seems that this year's divinations were not in your favour.</p>
         <p>Though you did not achieve the accolades of winning the Hogwarts quidditch cup, </p>
