--- a/views/match/match-transfiguration.hbs
+++ b/views/match/match-transfiguration.hbs
@@ -1,4 +1,4 @@
-<div class="log-div sorting-div-img">
+<div class="log-div transfiguration-div-img">
     <div class="sorting-page">
         <form action="/match/match-transfiguration" method="POST">
             <p>Your team proved to be most ingenous. Objects gain unusual properties whenever they are on the field</p>
