--- a/views/match/match.hbs
+++ b/views/match/match.hbs
@@ -6,3 +6,11 @@
         </form>
     </div>
 </div>
+<div class="log-div transfiguration-div-img">
+    <div class="sorting-page">
+        <form action="/match/match-transfiguration" method="POST">
+            <p>Your team proved to be most ingenous. Objects gain unusual properties whenever they are on the field</p>
+            <button type="submit">Play</button>
+        </form>
+    </div>
+</div>
