--- a/views/students/students-list.hbs
+++ b/views/students/students-list.hbs
@@ -1,20 +1,17 @@
-<h1>students list</h1>
-{{#each students}}
- <a href="students/{{id}}">  {{name}}  </a>
+<div class="log-div elimination-div-img">
+    <div class="sorting-page">
+                <h1>students list</h1>
+                {{#each students}}
+                <a href="students/{{id}}">  {{name}}  </a>
+                house: {{house}}
+                {{/each}}
+                <hr/>
+                {{#if errorMessage}}
+                <h1>{{errorMessage}}</h1>
+                {{/if}}
+                <button><a href="/dashboard">Go back to Dashboard</a></button>
+    </div>
+</div>
 
 
-
-<br>
-house: {{house}}
-
-
-<br>
-<br>
-<br>
-{{/each}}
-<hr/>
-{{#if errorMessage}}
-<h1>{{errorMessage}}</h1>
-{{/if}}
-<button><a href="/dashboard">Go back to Dashboard</a></button>
 
