--- a/views/Dashboard/Dashboard-landing.hbs
+++ b/views/Dashboard/Dashboard-landing.hbs
@@ -1,8 +1,11 @@
 <div class="log-div">
     <div class="dashboard-page">
-        <h3>"Professor Minerva McGonagall: Greetings {{loggedInUser}}."</h3>
+        <div class="dashboard-content">
+            <h3>"Professor Minerva McGonagall: Greetings {{loggedInUser}}."</h3>
+            <img src="{{houseRoomImage}}" alt="Common Room">
+        </div>
         <div class="dashboard-buttons">
-            <a href="/houses">Common room</a>
+            <a href="/houses">Common Room</a>
             <a href="/tournaments">Tournament</a>
             <a href="/students/team">Team</a>
             <a href="/students">Students</a>
