--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -352,6 +352,13 @@ h1 {
 
 /* Win - lose conditions */
 
+.match-div-img {
+  background-image: url("/images/match.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position-y: 40px;
+}
+
 .elimination-div-img {
   background-image: url("/images/Elimenation.jpg");
   background-repeat: no-repeat;
