--- a/views/halls/halls-sorting.hbs
+++ b/views/halls/halls-sorting.hbs
@@ -2,7 +2,7 @@
     <div class="sorting-page">
         <h1>What Hogwarts House would you be in?</h1>
         <p>Are you a brave Gryffindor, a cunning Slytherin, smart Ravenclaw, or kind Hufflepuff?</p>
-        <a href="/dashboard/sorting-result">Enter Hogwarts</a>
+        <a href="/halls/sorting-result">Enter Hogwarts</a>
     </div>
 </div>
 
