--- a/views/tournaments/tournaments-list.hbs
+++ b/views/tournaments/tournaments-list.hbs
@@ -2,6 +2,6 @@
     <div class="tournament-page">
         <h1>Tournament Placings</h1>
         <div class="tournament-board"></div>
-        <a href="/dashboard">Dashboard</a>
+        <a href="/halls">Common room</a>
     </div>
 </div>
