--- a/views/students/students-list.hbs
+++ b/views/students/students-list.hbs
@@ -9,7 +9,7 @@
                 {{#if errorMessage}}
                 <h1>{{errorMessage}}</h1>
                 {{/if}}
-                <button><a href="/dashboard">Go back to Dashboard</a></button>
+                <button><a href="/halls">Go back to your common room</a></button>
     </div>
 </div>
 
